--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testCompile group: 'org.junit.contrib', name: 'junit-theories', version: '4.12'
 	compile group: 'jstl', name: 'jstl', version: '1.2'
-	compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	compile 'org.webjars:jquery-ui:1.11.4'
+	compileOnly 'org.projectlombok:lombok:1.18.6'
+	annotationProcessor 'org.projectlombok:lombok:1.18.6'
+	compile 'org.springframework.boot:spring-boot-starter-thymeleaf',
+			'org.webjars:jquery-ui:1.11.4',
+			'org.springframework.boot:spring-boot-starter-jdbc',
+			"org.mybatis:mybatis-spring:1.3.1",
+			"org.mybatis:mybatis:3.4.1",
+			"org.springframework.boot:spring-boot-starter-data-jpa"
 }
