--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 db.driverClass=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost/springPractice?characterEncoding=UTF-8&serverTimezone=UTC
-db.username=root
-db.password=vkdl314
+db.url=URL
+db.username=NAME
+db.password=PASS
